# cpp-project-template

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  Main.cpp
cmake/: FetchBoost.cmake  FetchCPM.cmake  FetchGTest.cmake
core/: CMakeLists.txt
core/include/Core/: core.h
core/src/: core.cpp  core_private.h
tests/: CMakeLists.txt  test_core.cpp
